==> fengelhardt/ARM-HaLib/docs/MAC_v_2_7_1/PAL/AVR32/AT32UC3B1128/Boards/REB_7_0_STK600/pal_board.c <==
#include <stdbool.h>
#include <stdlib.h>
#include "pal_types.h"
#include "pal.h"
#include "pal_boardtypes.h"
#include "pal_config.h"
#include "pal_internal.h"
#include "pal_timer.h"

void pal_led_init(void)
{
    gpio_enable_output(LED0_PIN);
    gpio_enable_output(LED1_PIN);
    gpio_enable_output(LED2_PIN);
}

void pal_led(led_id_t led_no, led_action_t led_setting)
{
    uint8_t pin;

    switch (led_no)
    {
        case LED_0:
            pin = LED0_PIN;
            break;
        case LED_1:
            pin = LED1_PIN;
            break;
        case LED_2:
            pin = LED2_PIN;
            break;
        default:
            pin = LED2_PIN;
            break;
    }

    switch (led_setting)
    {
        case LED_ON:
            gpio_clr_gpio_pin(pin);
            break;

        case LED_OFF:
            gpio_set_gpio_pin(pin);
            break;

        case LED_TOGGLE:
            gpio_tgl_gpio_pin(pin);
            break;
        default: /* do nothing */
            break;
    }
}

void pal_sleep_mode(uint8_t sleep_mode)
{
    eic_options[0].eic_mode  = AVR32_EIC_LEVEL_IRQ;
    eic_options[0].eic_edge  = AVR32_EIC_LOW_LEVEL;
    eic_options[0].eic_async = AVR32_EIC_USE_ASYNC;
    eic_options[0].eic_line  = AVR32_EIC_INT0;
    gpio_enable_module_pin(AVR32_EIC_EXTINT_0_PIN, AVR32_EIC_EXTINT_0_FUNCTION);
    pal_global_irq_disable();
    eic_init(&AVR32_EIC, eic_options, EXT_INT_NUM_OF_LINES);
    eic_enable_line(&AVR32_EIC, eic_options[0].eic_line);
    eic_enable_interrupt_line(&AVR32_EIC, eic_options[0].eic_line);
    pal_global_irq_enable();
#ifdef __ICCAVR32__
    __sleep(AVR32_PM_SMODE_STANDBY);
#endif
#ifdef __GNUC__
    SLEEP(AVR32_PM_SMODE_STANDBY);
#endif
    /* To make compiler happy */
    sleep_mode = sleep_mode;
    /* Continue after wakeup */
}
