==> fengelhardt/ARM-HaLib/docs/MAC_v_2_7_1/PAL/MEGA_RF/ATMEGA128RFA1/Boards/EK1/pal_board.c <==
#include <stdbool.h>
#include <stdlib.h>
#include "pal.h"
#include "pal_boardtypes.h"
#include "pal_config.h"

void pal_led_init(void)
{
    LED_PORT |= (1 << LED_PIN_0);
    LED_PORT_DIR |= (1 << LED_PIN_0);
    LED_PORT |= (1 << LED_PIN_1);
    LED_PORT_DIR |= (1 << LED_PIN_1);
    LED_PORT |= (1 << LED_PIN_2);
    LED_PORT_DIR |= (1 << LED_PIN_2);
}

void pal_led(led_id_t led_no, led_action_t led_setting)
{
    switch (led_no)
    {
        default:
        case 0:
            switch (led_setting)
            {
                case LED_ON:    LED_PORT &= ~(1 << LED_PIN_0); break;
                case LED_OFF:   LED_PORT |= (1 << LED_PIN_0); break;
                case LED_TOGGLE: LED_PORT ^= (1 << LED_PIN_0); break;
            }
            break;

        case 1:
            switch (led_setting)
            {
                case LED_ON:    LED_PORT &= ~(1 << LED_PIN_1); break;
                case LED_OFF:   LED_PORT |= (1 << LED_PIN_1); break;
                case LED_TOGGLE: LED_PORT ^= (1 << LED_PIN_1); break;
            }
            break;

        case 2:
            switch (led_setting)
            {
                case LED_ON:    LED_PORT &= ~(1 << LED_PIN_2); break;
                case LED_OFF:   LED_PORT |= (1 << LED_PIN_2); break;
                case LED_TOGGLE: LED_PORT ^= (1 << LED_PIN_2); break;
            }
            break;
    }
}

void pal_sleep_mode(uint8_t sleep_mode)
{
    // Clear interrupt flag
    EIFR = (1 << INTF5);
    // Enable external interrupt
    EIMSK |= (1 << INT5);

#ifdef WATCHDOG
    /* Switch watchdog system reset off while being in sleep mode */
    WDT_DISABLE();
#endif

    /* Enter MCU sleep mode */
    SET_SLEEP_MODE(sleep_mode);
    SLEEP_MODE();

    /* Continue after wakeup */

#ifdef WATCHDOG
    /* Enable the Watchdog system reset mode */
#ifdef __ICCAVR__
     WDT_RESET();
     WDT_SYSTEM_RESET_MODE(WDT_TIMEOUT_PERIOD);
#endif /* __ICCAVR__ */
#ifdef __GNUC__
     wdt_disable();
     WDT_RESET();
     wdt_enable(WDT_TIMEOUT_PERIOD);
#endif /* __GNUC__ */
#endif
}
